--- a/second/newtask.tex
+++ b/second/newtask.tex
@@ -1,10 +1,8 @@
 %!TEX root = ../thesis.tex
 \section{作業調査}
-本研究では，従来のオフィスロボットが対象としている作業を調査し，ロボットアームの検証に適した作業対象を検討する．本研究で開発するロボットアームは，オフィスロボットとして最低限の機能を満たすことを目的としている．そのため，アームの性能を効果的に検証するためには，従来のオフィスロボットが頻繁に対象としており，オフィス環境における基本的な作業として位置づけられるタスクを選定することが重要である．
+本節では，従来のオフィスロボットが対象とする作業を調査し，ロボットアームの検証に適した作業対象を検討する．本研究で開発するロボットアームは，オフィスロボットとして最低限の機能を満たすことが要求される．このため，アームの性能を効果的に検証するには，従来のオフィスロボットが頻繁に対象とし，オフィス環境で基本的な作業と位置づけられるタスクを選定することが重要である．
 
-従来のオフィスロボットが実施している作業事例を動画および文献から収集し，合計77例を抽出した．その結果，約61\%の作業が台車移動とピック\&プレースを組み合わせた作業であることが確認された．代表的な事例として，部屋の片付けや荷物の運搬が挙げられる．その他の作業事例として，ドアの開閉，ボタンの押下，フロアの巡回などが観察された．
+従来のオフィスロボットによる作業事例を動画および文献から収集した結果，77例が抽出された．そのうち，約61\% の作業が台車移動とピック\& プレースを組み合わせた作業であり，代表例として部屋の片付けや荷物の運搬が挙げられる．その他の作業事例として，ドアの開閉，ボタンの押下，フロアの巡回などが観察された．これらの結果から，従来のオフィスロボットが主に対象とする作業は，物体を把持して移動させるタスクであると推察される．
 
-これらの結果から，現行のオフィスロボットが主に対象としている作業は，物体を把持し移動させる作業であると推察される．また，ロボットアームの検証作業を選定するにあたっては，基本的な作業であることに加え，多様な物体操作および他の作業への応用性を考慮することが重要である．以上を踏まえ，ロボットアームの検証対象として「机の片付け作業」を選定することが適切であると判断した．
-
-机の片付け作業は，多様な物体の把持能力が求められるだけでなく，研究者が自由に操作条件を設定しやすい特性を有している．さらに，本作業は，散乱した床の片付け作業や棚の物体操作など，他のタスクへの応用が可能であるため，ロボットアームの性能評価において有用性が高いと考える．
+検証作業を選定するにあたり，基本的な作業であること，多様な物体操作への対応力，ならびに他の作業への応用性を考慮した．その結果，「机の片付け作業」が検証対象として適切であると結論付けた．この作業は，多様な物体の把持能力が求められると同時に，研究者が操作条件を柔軟に設定可能である．また，床の片付けや棚の物体操作など，他のタスクへの応用も可能であり，ロボットアームの性能評価において高い有用性を示す．
 \newpage
