ロボットアームの設計章を更新し、オープンプラットフォームとしての利用しやすさを重視した設計方針を明確化した。また、部品の選定、構造設計、平行グリッパの設計、強度確認についての内容を追加した。

--- a/third/main.tex
+++ b/third/main.tex
@@ -1,11 +1,11 @@
 \chapter{設計}
 \label{chap:third}
 %
-本章ではロボットアームのメカニズムの設計について述べる．
-まず，選定したQDDモータについて説明し，ロボットアームの設計について述べる．
+本章ではロボットアームのメカニズムの設計について述べる．基本方針として，オープンプラットフォームとしての利用しやすさを重視し，利用者が簡易的に組み立てて利用できるロボットアームを目指して設計を行った．
+本章では，部品の選定，構造設計，平行グリッパの設計，そして強度確認について述べる．
 
 \input{third/QDDmotor}
 \input{third/design}
-\input{third/structural_analysis}
 \input{third/hand}
+\input{third/structural_analysis}
 %
