部品の選定章を追加し、QDDモータ、板金部品、アルミフレーム、エンドエフェクタの選定理由を明確化した。また、各部品の特性や利点について詳細を記述した。

--- a/third/QDDmotor.tex
+++ b/third/QDDmotor.tex
@@ -1,12 +1,17 @@
 %!TEX root = ../thesis.tex
-\section{QDDモータの選定}
+\section{部品の選定}
+設計したロボットアームは，QDDモータ，アルミフレーム，板金部品，エンドエフェクタから構成される．本節では，それらの選定理由について述べる．
+\subsection{QDDモータ}
 飯塚ら\cite{飯塚浩太2021}の研究では，減速比10:1のQDDモータが使用されている．また，Zhaoら\cite{10106520}の研究においては，減速比9:1のQDDモータが採用されていた．これらの先行研究は，ロボットアームと人の衝突時の衝撃力軽減を実現するためには，この程度の減速比を持つモータを採用することが有効であることを示唆している．
 
-さらに，本研究ではオープンプラットフォームの観点を重視し，他のロボットアームに使用されているモータと同程度，またはそれ以下の価格であることを選定基準とした．
+また，本研究ではオープンプラットフォームの観点を重視し，他のロボットアームに使用されているモータと同程度の価格であることも考慮した．
 
 以上を踏まえ，本研究では，持つSteadywinのGIM8108-8とGIM3505-8を採用した．減速比は8:1であり，先行研究で使用されていたモータと同程度の減速比を持つ．
-\subsection{選定したモータの性能}
-表\ref{tab:QDDComparison}に，選定したQDDモータとReachy\cite{Reachy:online}のアームに使用されているモータ(Dynamixel MX-106T)の比較を示す．選定したSteadywinのGIM8108-8とGIM3505-8は，減速比が8:1で，飯塚ら\cite{飯塚浩太2021}の研究で使用していた減速器(10:1)や，Zhaoら\cite{10106520}の使用していたQDDモータの減速比(9:1)の減速比と近いものを選んだ．Reachyに使用されているモータと比較すると(\ref{tab:QDDComparison}参照)減速比が非常に小さいことがわかる．そのため，応答性やバックドライバビリティが高く，適切に制御することで衝突時の衝撃を軽減することが可能である．また，許容ラジアル荷重とアキシアル荷重も大きいため，追加の補強部品を必要とせずにロボットアームの構造を簡略化することが可能である．
+\subsubsection{選定したモータの性能}
+% 表\ref{tab:QDDComparison}に，選定したQDDモータとReachy\cite{Reachy:online}のアームに使用されているモータ(Dynamixel MX-106T)の比較を示す．
+選定したSteadywinのGIM8108-8とGIM3505-8は，減速比が8:1であり，飯塚ら\cite{飯塚浩太2021}の研究で使用していた減速器(10:1)や，Zhaoら\cite{10106520}の使用していたQDDモータの減速比(9:1)と近いものを選んだ．
+表\ref{tab:QDDComparison}に，選定したQDDモータとReachy\cite{Reachy:online}のアームに使用されているモータである，Dynamixel MX-106Tとの比較を示す．
+表\ref{tab:QDDComparison}より，選定したQDDモータの減速比は，Dynamixelに比べ非常に小さく，応答性やバックドライバビリティが高い．そのため，適切に制御することで衝突時の衝撃を軽減することが可能である．さらに，許容ラジアル荷重とアキシアル荷重がDynamixelよりも大きく(\ref{tab:QDDComparison}参照)，追加の補強部品を必要とせずにロボットアームの構造を簡略化することが可能となる．
 \begin{table}[]
   \centering
   \caption{QDD motor performance comparison}
@@ -24,6 +29,15 @@
   \end{tabular}
 \end{table}
 
-\subsection{QDDモータの欠点}
-QDDモータは高トルク・高スピードでの動作が可能であるという利点を持つ一方で、この特性は制御が不十分な場合にリスクとなる．特に、通電時に動作が暴走した場合、一般的なモータと比較して周囲の人や機器への被害が大きい．そのため、QDDモータを安全に運用するためには、適切な制御と安全対策が必要である．
+\subsubsection{QDDモータの欠点}
+QDDモータは高トルク・高スピードでの動作が可能であるという利点を持つ一方で，この特性は制御が不十分な場合にリスクとなる．特に，通電時に動作が暴走した場合，一般的なモータと比較して周囲の人や機器への被害が大きい．そのため，QDDモータを安全に運用するためには，適切な制御と安全対策が必要である．本開発では制御を実装しないため，現時点で考えられる安全対策について\ref{chap:kensyo}章で検討する．
+\clearpage
+
+\subsection{板金部品}
+ロボットアームを構成する部品は，構造を簡素化と強度の確保を目的として，板金部品を使用した．板金部品の素材には，板金加工に適しているアルミニウム合金のA5052を採用した．製作には，機械加工・板金加工サービス「meviy」\cite{meviy:online}を使用し，自動見積もりが通る部品を前提として部品を設計した．
+\subsection{アルミフレーム}
+ロボットアームのリンクにはアルミフレームを採用し，リンク長の変更を容易にした．これにより，他の開発者が用途に応じてリンク長を柔軟に調整することが可能となり，プラットフォームとしての汎用性および適応性が向上した．
+\subsection{エンドエフェクタ}
+エンドエフェクタは，3Dプリント部品とリニアガイドで構成されている．平行グリッパの機構を実現するために，滑らかな直線運動を可能とするリニアガイドを採用した．また，エンドエフェクタに高い強度が要求されないことや，形状の変更が容易であることを考慮し，主要な部品に3Dプリントを採用した．
+
 \newpage
